--- a/app/views/users/_bio.html.erb
+++ b/app/views/users/_bio.html.erb
@@ -1,4 +1,4 @@
 <div class="column">
-  <h3>Bio</h3>
-  <p><%= @user.bio %></p>
+  <h3 class="bio_title">Bio</h3>
+  <p class="bio_user"><%= @user.bio %></p>
 </div>
